Fix environment-cd for paths containing spaces.

Problem: GDBMI only accepts paths containing spaces if they are in
double quotes otherwise cd will fail.

Solution: Add prepend and append double quotes to the dir string
instead of using KShell::quoteArg.

REVIEW: 121061
BUG: 339231